# Impact

./: .gitignore  BigNumber.cpp  CMakeLists.txt  CompilerTimeRegexTu.cpp  FixSizedTemplateRegex.cpp  Magic3.cpp  MagicCompare.cpp  README.md  RegexInCompilerTime.cpp  TemplateExpand.cpp  Test.cpp  VorNotV.cpp  WriteCppLikeLisp.cpp  ifOperatorReload.cpp  magic1.cpp  magic2.cpp
tests/: OverloadOperator.cpp
