cmake_minimum_required(VERSION 3.3)
project(AnotherC__)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(Magic1 ifOperatorReload.cpp)
set(Magic2 magic1.cpp)
set(Magic3 magic2.cpp)
set(Magic4 Magic3.cpp)
set(Magic5 MagicCompare.cpp)
#set(Magic6 magic1.cpp)
add_executable(Magic1 ${Magic1})
add_executable(Magic2 ${Magic2})
add_executable(Magic3 ${Magic3})
add_executable(Magic4 ${Magic4})
add_executable(Magic5 ${Magic5})
#add_executable(Magic6 ${Magic6})