cmake_minimum_required(VERSION 3.3)
project(AnotherC__)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")

set(CjhkagsghCCC MagicCompare.cpp)
#set(Magic6 magic1.cpp)
add_executable(ifOperatorReload ifOperatorReload.cpp)
add_executable(BigNumber BigNumber.cpp)
add_executable(magic2 magic2.cpp)
add_executable(Assignment Assignment.cpp)
add_executable(MagicCompare MagicCompare.cpp)
add_executable(Lisp WriteCppLikeLisp.cpp)
add_executable(Regex RegexInCompilerTime.cpp)
add_executable(LambdaTest LambdaTest.cpp)
add_executable(RegexTu CompilerTimeRegexTu.cpp)
add_executable(Test Test.cpp)
add_executable(tuguan_regex TemplateExpand.cpp)
#add_executable(Magic6 ${Magic6})